--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,15 @@
             android:name=".StockActivity"
             android:label="@string/title_activity_stock">
         </activity>
+        <activity
+            android:name=".StockPurchaseActivity"
+            android:label="@string/title_activity_stock_purchase"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="uk.co.nyakeh.stacks.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
