Updated third party dependency versions & changed implementation for new versions of retrofit etc. Hide the keyboard by default on the Stock Purchase Admin page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity
             android:name=".StockPurchaseActivity"
-            android:label="@string/title_activity_stock_purchase">
+            android:label="@string/title_activity_stock_purchase"
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 
