--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -27,6 +26,10 @@
             android:name=".StockPurchaseActivity"
             android:label="@string/title_activity_stock_purchase"
             android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
+            android:name=".NetWorthActivity"
+            android:label="@string/title_activity_net_worth">
         </activity>
     </application>
 
