--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:name=".NetWorthActivity"
-            android:label="@string/title_activity_net_worth">
+            android:label="">
         </activity>
     </application>
 
