--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".NetWorthActivity"
             android:label="">
         </activity>
+        <activity
+            android:name=".DashboardActivity"
+            android:label="">
+        </activity>
     </application>
 
 </manifest>
