+ Added new page to hold stocks that i'm currently tracking (I want to build towards a page that will tell me whens a good time to buy & which fund out of a small shortlist).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".DashboardActivity"
             android:label="">
         </activity>
+        <activity
+            android:name=".FundActivity"
+            android:label="">
+        </activity>
         <receiver android:name=".GainsWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
