+ Added (currently empty) page to house the manipulation of currently harcoded values such as FI number & finds to watch.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".FundActivity"
             android:label="">
         </activity>
+        <activity
+            android:name=".ControlPanelActivity"
+            android:label="@string/control_panel">
+        </activity>
         <receiver android:name=".GainsWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
