+ Built view + controller for new Dividend tracking page. (it currently doesn't perform any database interaction).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
+            android:name=".DividendActivity"
+            android:label="@string/title_activity_dividend"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
             android:name=".FundActivity"
             android:label="">
         </activity>
